<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的股票</string>
    <string name="btnPrePage">上一页</string>
    <string name="btnNextPage">下一页</string>
    <string name="btnReturn">返回</string>
    <string name="btnRefresh">刷新</string>
    <string name="title_activity_main">我的股票</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_trade">TradeActivity</string>
    <string name="btnRollOut">转出</string>
    <string name="btnPayInto">转入</string>
    <string name="btnReset">重置</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
