<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.KGraph.AccountActivity">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:minHeight="50dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="资金余额"
            android:textAlignment="textStart"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/txtCapticalBalance"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="Large Text"
            android:textAlignment="viewEnd"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:minHeight="50dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="可用余额"
            android:textAlignment="textStart"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtAvailableBalance"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="Large Text"
            android:textAlignment="viewEnd"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:minHeight="50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="证券市值"
            android:textAlignment="textStart"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtMarketValue"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="Large Text"
            android:textAlignment="viewEnd"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="盈       亏"
            android:textAlignment="textStart"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtShares"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="Large Text"
            android:textAlignment="viewEnd"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="资产总值"
            android:textAlignment="textStart"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtAssets"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="Large Text"
            android:textAlignment="viewEnd"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="转       入"
            android:textAlignment="textStart"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtPayInto"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text=""
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:ems="10"/>
        <Button android:id="@+id/btnPayInto" android:layout_marginLeft="10dp" android:layout_width="50dp" android:layout_height="wrap_content" android:text="@string/btnPayInto" android:layout_column="2"></Button>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="转       出"
            android:textAlignment="textStart"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtRollOut"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text=""
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:ems="10" />
        <Button android:id="@+id/btnRollOut" android:layout_marginLeft="10dp"  android:layout_width="50dp" android:layout_height="wrap_content" android:text="@string/btnRollOut" android:layout_column="2"></Button>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:gravity="center_vertical">
        <Button android:id="@+id/btnReset" android:layout_marginLeft="10dp"  android:layout_width="50dp" android:layout_height="wrap_content" android:text="@string/btnReset" android:layout_column="2"></Button>
        </TableRow>
</TableLayout>
